--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -26,7 +26,7 @@
         </li>
         <li>
             <a class="clear" href="{{ page.url | relative_url }}">
-                {{ page.title }}123
+                {{ page.title }}
             </a>
         </li>
         {% endif %}
