--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -31,6 +31,15 @@
         </li>
         {% endif %}
         {% endfor %} 
+		<li class="separator">
+            |
+        </li>
+        <li>
+            <a class="clear" href="{{{ site.baseurl }}/">
+                Post
+            </a>
+        </li>
+        {% endi
 		{% if site.theme_settings.research %}
         <li class="separator">
             |
@@ -47,7 +56,7 @@
         </li>
         <li>
             <a class="clear" href="{{ site.url }}{{ site.baseurl }}/portfolio">
-                Portfolio*
+                Portfolio
             </a>
         </li>
         {% endif %}
