modifying navbar.html

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -35,11 +35,10 @@
             |
         </li>
         <li>
-            <a class="clear" href="{{{ site.baseurl }}/">
+            <a class="clear" href="{{ site.baseurl }}/">
                 Post
             </a>
         </li>
-        {% endi
 		{% if site.theme_settings.research %}
         <li class="separator">
             |
